# mhe

./: .gitignore  .pre-commit-config.yaml  .tsbuildinfo  AGENTS.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  Cfcp-sdk-android • Scaffold V0.docx  DESKTOP_COMMANDER_IMPLEMENTATION.md  GOVERNANCE.md  LICENSE  MAKEFILE_REFERENCE.md  MANUAL_TESTING_PROCEDURES.md  Makefile  Memory Harvester Engine — Readme (architecture Spec V1.3.0.docx  REORGANIZATION_PLAN.md  TESTING_PLAN.md  babel.config.cjs  claude_parser_complete.py  codessa-memory-harvester.tsx  jest.config.cjs  jest.config.js  memory_harvester_engine_readme_architecture_spec_v_0.md  memory_harvester_engine_readme_architecture_spec_v_1.3.0.md  mhe_cli_typer_v_0.py  mhe_codex.md  mvm_roadmap.md  package-lock.json  package.json  requirements-observability.txt  requirements-test.txt  run-tests.cjs  security_assessment_report.json  security_tests.py  sprint2_completion.md  sprint3_branching_plan.md  sprint3_execution_checklist.md  sprint4_complete_checklist.md  sprint4_execution_checklist.md  sprint4_vision_pack.txt  sprint_4_master_doc.md  (+8 more)
.github/: CODEOWNERS  release-please-config.json  release-please.yml
.trae/: mcp.json  project_rules.md
__tests__/: CodessaMemoryHarvester.integration.test.tsx
codessa-neural-command/: App.tsx  README.md  index.html  metadata.json  package.json
components/: APIConnectionsPanel.tsx  AnalyticsDashboard.tsx  ContentManagementPanel.tsx  SearchPanel.tsx
docs/: REPOSITORY_STRUCTURE.md  integration-troubleshooting-guide.md
frontend/: index.html  styles.css
mcp/: unification-pack-v2.md
memory-harvester-engine/: README-START.md
memory-harvester-engine-scaffold/: pyproject.toml
memory-harvester-engine-scaffold-v0.2/: MIGRATIONS.md  docker-compose.yml
memory-harvester-engine-scaffold-v0.6.0/: alembic.ini
memory-harvester-engine-scaffold-v0.9/: .env.example
memory-harvester-engine-scaffold/src/mhe/capture/parsers/: chatgpt.py
memory-harvester-engine-v1.0.1-full/: README.md
memory-harvester-engine-v1.2.0-observability/: .env.example  requirements-observability.txt
mnemos-mindweaver/: Mnemos_MindWeaver_Code_Review.md  agent_roles.md  agentic_mindspace_codex.md  api_specification.md  architecture_doc.md  ava_memory_systems_unified_ideation.md  ava_sovereign_memory_system_implementation_plan_v_1.md  codessa-memory-harvester.tsx  codessa-pygpt-integration.md  (+23 more)
mnemos-mindweaver/mnemos-starter/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tsconfig.json
mnemos-mindweaver/mnemos-starter/.github/workflows/: ci.yml
mnemos-mindweaver/mnemos-starter/examples/events/: ingest.normalized.scroll.json
mnemos-mindweaver/mnemos-starter/infra/opa/: policy.rego
mnemos-mindweaver/mnemos-starter/services/api/: Dockerfile  pyproject.toml
mnemos-mindweaver/mnemos-starter/services/api/app/: db.py  main.py  models.py  schemas.py  search.py  settings.py
mnemos-mindweaver/mnemos-starter/services/worker/: Dockerfile  pyproject.toml
mnemos-mindweaver/mnemos-starter/services/worker/worker/: run.py  settings.py  tasks.py  workflows.py
(+167 files in other folders)
