[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-harvester-engine"
version = "0.1.0"
description = "Cognitive–anamnetic pipeline: capture multi-assistant chats, extract artifacts, index in Postgres+pgvector, expose FastAPI for RAG."
authors = [{name = "Codessian"}]
readme = "README-START.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-ulid>=2.7.0",
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
  "sqlalchemy-pgvector>=0.2.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
