[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package_name"
version = "0.1.0"
description = "Mnemos MindWeaver – core package"
readme = "README.md"
authors = [{ name = "Phoenix" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.10",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=your_package_name --cov-report=term-missing"
minversion = "8.0"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.coverage.run]
branch = true
source = ["your_package_name", "src"]
