
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-api"
version = "0.1.0"
description = "Mnemos Recall API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pgvector>=0.2.5",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
